# stones_django

./: .gitignore  README.md  main.py  pyproject.toml
stones/: db.sqlite3
stones/api/: serializers.py  urls.py  views.py
stones/landing/: admin.py  models.py  urls.py  views.py
stones/landing/migrations/: 0001_initial.py  0002_header_service_delete_fillingtext.py  0003_service_image.py  0004_materials_alter_header_line2_alter_service_image_and_more.py  0005_rename_materials_material.py  0006_contact_footer_navigation_remove_header_line2.py  0007_rename_adress_footer_address.py
stones/landing/static/landing/css/: styles.css
stones/landing/templates/: index.html
stones/stones/: asgi.py  settings.py  urls.py  wsgi.py
